@@ -1,3 +1,4 @@
+- fix vipsthumbnail Chicago.png, again
 
 - can we use postbuild elsewhere? look at use of "preclose" / "written", etc. 
 
