@@ -31,6 +31,7 @@
 - support 1/2/4 bit palette tiff images with alpha
 - vips_system() now uses g_spawn_command_line_sync()
 - added im_tile_cache_random() to help nip2
+- added hough_circle() to vips7 C++ API
 
 6/3/14 started 7.38.6
 - grey ramp minimum was wrong
